# OpenHands

./: .gitignore  Makefile  config.template.toml  docker-compose.yml  pyproject.toml
agentmojo/: README.md  __init__.py
agentmojo/agenthub/: README.md  __init__.py
agentmojo/agenthub/browsing_agent/: README.md  __init__.py  browsing_agent.py  response_parser.py
agentmojo/agenthub/codeact_agent/: README.md  __init__.py  codeact_agent.py  function_calling.py
agentmojo/agenthub/dummy_agent/: __init__.py  agent.py
agentmojo/agenthub/visualbrowsing_agent/: __init__.py  visualbrowsing_agent.py
agentmojo/controller/: __init__.py  action_parser.py  agent.py  agent_controller.py  replay.py  stuck.py
agentmojo/controller/state/: state.py  task.py
agentmojo/core/: cli.py  download.py  logger.py  loop.py  main.py  message_format.md  message_utils.py  setup.py
agentmojo/core/config/: README.md  __init__.py  agent_config.py  app_config.py  condenser_config.py  llm_config.py  sandbox_config.py  utils.py
agentmojo/core/schema/: __init__.py
agentmojo/critic/: base.py  finish_critic.py
agentmojo/events/: __init__.py  event.py  stream.py  utils.py
agentmojo/events/action/: __init__.py  action.py  agent.py  browse.py  commands.py  (+3 more)
agentmojo/integrations/: provider.py  utils.py
agentmojo/io/: __init__.py  json.py
agentmojo/linter/: __init__.py
agentmojo/llm/: __init__.py  async_llm.py  bedrock.py  debug_mixin.py  fn_call_converter.py  llm.py  retry_mixin.py  streaming_llm.py
agentmojo/memory/: __init__.py  conversation_memory.py  memory.py
agentmojo/microagent/: microagent.py
agentmojo/resolver/: README.md  io_utils.py  resolve_all_issues.py  resolve_issue.py  resolver_output.py  send_pull_request.py  utils.py  visualize_resolver_output.py
agentmojo/runtime/: README.md  __init__.py  action_execution_server.py  base.py
agentmojo/security/: README.md  __init__.py  analyzer.py  options.py
agentmojo/server/: README.md  app.py  auth.py  file_config.py  listen.py  listen_socket.py  middleware.py  monitoring.py  settings.py  shared.py
agentmojo/storage/: __init__.py  google_cloud.py  local.py  memory.py  s3.py
agentmojo/utils/: chunk_localizer.py  http_session.py  prompt.py  shutdown_listener.py  tenacity_stop.py
containers/: README.md  build.sh
containers/app/: Dockerfile  config.sh  entrypoint.sh
containers/dev/: Dockerfile  README.md  compose.yml  dev.sh
containers/e2b-sandbox/: README.md  e2b.toml
containers/runtime/: README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: root.tsx
microagents/: README.md
microagents/knowledge/: add_agent.md  github.md
microagents/tasks/: add_openhands_repo_instruction.md  address_pr_comments.md  get_test_to_pass.md  update_pr_description.md  update_test_for_new_implementation.md
(+156 files in other folders)
